--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
+    <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true" app:srcCompat="@drawable/ic_plus"
+            android:id="@+id/fbtnAddEvent" android:layout_alignParentEnd="true" android:layout_marginEnd="16dp"
+            android:layout_alignParentBottom="true" android:layout_marginBottom="8dp"
+            app:backgroundTint="@color/colorPrimary" android:tint="@color/colorLightBlue"/>
     <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_eventlist"
             android:layout_height="match_parent"
@@ -13,6 +20,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginTop="0dp" android:layout_alignParentBottom="true" android:layout_marginBottom="0dp"
             android:layout_marginStart="0dp" android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"
-            android:layout_width="match_parent"/>
+            android:layout_width="match_parent">
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
